# ryanmonaghan-dev

./: .gitignore  Cargo.toml  README.md  Rocket.toml  package.json  pnpm-lock.yaml  tailwind.config.js
client/: posts.json
client/pages/: index.html
client/static/: htmx.min.js  index.css
migrations/2023-07-01-143804_create_posts/: up.sql
src/: latex.rs  main.rs  posts.rs  schema.rs  utilities.rs
static/css/: index.compiled.css  index.css  index.css.map
styles/: index.scss
views/: index.html
